Last CVS update: 17/07/05
	- started doc manager using doxygen (doxyfile added in gpac/doc). APIs may be slightly reworked during the documentation phase. 
		Documentation will only be produced for libgpac, eg all exported headers in gpac/include/gpac
		Development APIs documentation (gpac/include/gpac/internal) will come later.
	- cleaned up IsoMedia reading for more efficient and more reliable parsing
  - GPAC is now licensed under LGPL. Massive code rewrite and repository reorganization in order to comply to some 
    base coding style (cf gpac/doc/CODING_STYLE). APIs are not backward compatible, but should now be in a frozen state/spelling
    for the most common tools (utils, MPEG-4 OD, IsoMedia and terminal APIs)
  - misc fixes in MP4Box option parsing, in RTP multicast setup
  - Osmozilla should now be much more stable on Win32 - Linux version to come.

  
20/06/05: GPAC 0.3.0 release
  - fixed bug in 4GB file writing in interleaving mode
  - fixed bug in absolute path usage in MP4Box
  - added -cat file*.mpg syntax support
  - added support for mass encryption in ISMACrypt drm_file (trackID="*" means all tracks get encrypted with the desired key)
  - fixed compilation of wxOsmo4 with wxWidgets+Unicode
  - fixed bug in 3GPP text layout when not fully contained in video
  - added mapping between OD.ESD.GF_Language and MP4.MediaHeader.Language (BT/XMT <-> MP4)
  - fixed bug in SDP playback without RTSP session attached (live casts)
  - added language and delay selection at import time (cf MP4Box -h import)
  - made -lang able to change all tracks languages by default !erase language specified at import time!
  - added -lang option to MP4Box to change track language
  - added -delay option to MP4Box to change initil media delay - ALTHOUGH 100% STANDARD, THIS MAY NOT BE SUPPORTED BY SOME PLAYERS
	- updated configure for opengl disabling and fixed-point configuration